--- a/www/speakers.html
+++ b/www/speakers.html
@@ -46,40 +46,36 @@
     <div class="wrapper">
       <div id="menu">
         <ul>
-          <li>
-            <a href="index.html">
-              <i class="fa fa-home" aria-hidden="true">
-              </i>
-            </a>
-          </li>
-          <li>
-            <a href="schedule.html">
-              <i class="fa fa-calendar" aria-hidden="true">
-              </i>
-            </a>
-          </li>
-          <li>
-            <a href="speakers.html">
-              <i class="fa fa-microphone" aria-hidden="true">
-              </i>
-            </a>
-          </li>
-          <li>
-            <i class="fa fa-map-o" aria-hidden="true">
-            </i>
-          </li>
-          <li>
-            <a href="partners.html">
-              <i class="fa fa-heart" aria-hidden="true">
-              </i>
-            </a>
-          </li>
-          <li>
-            <i class="fa fa-info" aria-hidden="true">
-            </i>
-          </li>
+            <li>
+                <a href="index.html">
+                    <i class="fa fa-home" aria-hidden="true"></i>
+                </a>
+            </li>
+            <li>
+                <a href="schedule.html">
+                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                </a>
+            </li>
+            <li>
+                <a href="speakers.html">
+                    <i class="fa fa-microphone" aria-hidden="true"></i>
+                </a>
+            </li>
+            <li>
+				<a href="map.html">
+                	<i class="fa fa-map-o" aria-hidden="true"></i>
+				</a>
+            </li>
+            <li>
+                <a href="matchma.html">
+                    <i class="fa fa-handshake-o" aria-hidden="true"></i>
+                </a>
+            </li>
+            <li>
+                <i class="fa fa-info" aria-hidden="true"></i>
+            </li>
         </ul>
-      </div>
+    </div>
       <div id="content">
         <!--<div class="swipeOpenMenu" id="swipeOpenMenu"></div>-->
         <div class="closeMenu" id="closeMenu">
