--- a/www/matchma.html
+++ b/www/matchma.html
@@ -23,6 +23,11 @@
     <link rel="stylesheet" href="css/shift-styles.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link href="css/carousel.css" rel="stylesheet">
+	<style>
+		::-webkit-scrollbar {
+			display:none;
+		}
+	</style>
 </head>
 <body>
 <div class="wrapper">
@@ -67,8 +72,13 @@
             </a>
         </nav>
 
-        <div class="container" style="background: url('img/kartta3.png') center top no-repeat;background-size:cover;">
-
+        <div class="container" style="padding-top: 5vh;">
+			<h4>Get networking now with</h4>
+			<a href="https://app.brella.io/events/brellademo/" target="_system" style="width:60vw; padding: 10vh 0;"><img src="img/brella-newlogo.svg" style="width:60vw; padding: 6vh 0;"></a>
+			<h1 style="margin-bottom:6vh;">Matchmaking available for professional pass only</h1>
+			<div style="width: 100%; height: 47.2vh; background: url('img/purple-haze.jpeg') center center no-repeat;background-size: cover;border-top: 1px solid #e64696;">
+				<h4 style="width:70vw; margin: 6vh auto;">Upgrade your ticket to professional pass at<a href="" style="display: block; margin: 3vh;"><img src="img/lyyti.png" style="display: block; margin: 3vh auto; width: 40vw;"></img></a> or <a href=""style="display: block; margin: 3vh;"><h1>AT THE <i class="fa fa-info-circle" aria-hidden="true"></i> DESK</h1></a></h4>
+			</div>
         </div>
     </div>
 <script src="js/jquery-3.1.1.min.js"></script>
