--- a/www/schedule.html
+++ b/www/schedule.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/shift-styles.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link href="css/carousel.css" rel="stylesheet">
 </head>
-
 <body>
 <div class="wrapper">
     <div id="menu">
@@ -44,11 +44,13 @@
                 </a>
             </li>
             <li>
-                <i class="fa fa-map-o" aria-hidden="true"></i>
+				<a href="map.html">
+                	<i class="fa fa-map-o" aria-hidden="true"></i>
+				</a>
             </li>
             <li>
-                <a href="partners.html">
-                    <i class="fa fa-heart" aria-hidden="true"></i>
+                <a href="matchma.html">
+                    <i class="fa fa-handshake-o" aria-hidden="true"></i>
                 </a>
             </li>
             <li>
@@ -57,7 +59,7 @@
         </ul>
     </div>
     <div id="content">
-	    <!--<div class="swipeOpenMenu" id="swipeOpenMenu"></div>-->
+        <!--<div class="swipeOpenMenu" id="swipeOpenMenu"></div>-->
         <div class="closeMenu" id="closeMenu"></div>
         <nav class="navbar navbar-default">
             <a id="openMenu" class="navbar-brand" href="#">
@@ -65,46 +67,28 @@
             </a>
         </nav>
 
-        <div class="container">
+        <div class="container" style="background: url('img/schedule.jpeg') center top no-repeat;background-size:cover;">
+
         </div>
     </div>
-</div>
-
-
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.mobile-events.min.js"></script>
 <script type="text/javascript" src="js/cordova.oauth2.js"></script>
-<script type='application/javascript' src='js/fastclick.js'></script>
 <script>
-
-	$(function() {
-        FastClick.attach(document.body);
+    $(document).ready(function(){
+        function qs(key) {
+            key = key.replace(/[*+?^$.\[\]{}()|\\\/]/g, "\\$&"); // escape RegEx meta chars
+            var match = location.search.match(new RegExp("[?&]" + key + "=([^&]+)(&|$)"));
+            var slide = match && decodeURIComponent(match[1].replace(/\+/g, " "));
+            if (Math.floor(slide) == slide && $.isNumeric(slide))
+                return parseInt(slide);
+            else
+                return 0;
+        }
+        $('#myCarousel').carousel(qs('slide'));
     });
-
-    $(function(){
-        $.getJSON('schedule.json',function(data){
-            //console.log(data.wednesday[0].schedule.length)
-            for(i = 0; i<data.wednesday.length; i++){
-                $('.container').append('<div><strong>' + data.wednesday[i].venue + '</strong></div>');
-                for(j = 0; j<data.wednesday[i].schedule.length; j++){
-                    $('.container').append(
-                        '<div>'+
-                        data.wednesday[i].schedule[j].name + ', ' +
-                        data.wednesday[i].schedule[j].company + '<br>' + data.wednesday[i].schedule[j].time
-                        + '</div>'
-                    );
-                };
-                $('.container').append('<hr>');
-            };
-
-            /*$.each(data.employees,function(i,emp){
-                $('ul').append('<li>'+emp.firstName+' '+emp.lastName+'</li>');
-            });*/
-        });
-    });
-
-
+    // SIDE MENU
 
     $('#openMenu').tapend(function(){
         $('.wrapper').animate(
@@ -133,13 +117,41 @@
 		);
         $(this).css('display', 'none');
     }).stop(true);
-/*
+
+/*  // MENU SWIPE FROM LEFT
     $('#content').swiperight(function(){
         $('.wrapper').animate({left:'0px'});
         $('#closeMenu').css('display','block');
     });
 */
+    // SPEAKER INTRO CAROUSEL
+    $("#myCarousel").swiperight(function() {
+        $("#myCarousel").carousel('prev');
+    });
 
+    $("#myCarousel").swipeleft(function() {
+        $("#myCarousel").carousel('next');
+    });
+
+    $(".carousel-caption").tapend(function(){
+        $(this).animate({bottom:'0vh'},200);
+        $(this).find('#arrowUp').removeClass('fa-chevron-up').addClass('fa-chevron-down');
+        $('.closeMenu').css({
+            'display': 'block',
+            'height': '54vh'
+            });
+    });
+
+    $('.closeMenu').on('tapend tapmove', function(){
+        $(".carousel-caption").animate({bottom:'-50vh'},200);
+        $(".carousel-caption").find('#arrowUp').removeClass('fa-chevron-down').addClass('fa-chevron-up');
+        $(this).css({
+            'display': 'none',
+            'height': '100vh'
+        });
+    });
+
+    // USER INFO
 	$('#send').on('tap', function(){
 		localStorage.userName = $('#input').val();
 		introductions();
@@ -156,10 +168,10 @@
 
 		}else{
 			$('#greetings').html('You\'re new! Introduce yourself <strong><a href="">here</a></strong>');
-		}
-	}
+		};
+	};
 
-    // template for new oauth2 service
+    // LINKEDIN OAUTH2
     function oauth2_login() {
         $.oauth2({
             auth_url: 'https://www.linkedin.com/oauth/v2/authorization',           // required
@@ -188,7 +200,7 @@
             $("#logs").append("<p class='error'><b>error: </b>"+JSON.stringify(error)+"</p>");
             $("#logs").append("<p class='error'><b>response: </b>"+JSON.stringify(response)+"</p>");
         });
-    }
+    };
 </script>
 </body>
 </html>
