--- a/www/schedule2.html
+++ b/www/schedule2.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/shift-styles.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link href="css/carousel.css" rel="stylesheet">
 </head>
+
 <body>
 <div class="wrapper">
     <div id="menu">
@@ -44,13 +44,11 @@
                 </a>
             </li>
             <li>
-				<a href="map.html">
-                	<i class="fa fa-map-o" aria-hidden="true"></i>
-				</a>
+                <i class="fa fa-map-o" aria-hidden="true"></i>
             </li>
             <li>
-                <a href="matchma.html">
-                    <i class="fa fa-handshake-o" aria-hidden="true"></i>
+                <a href="partners.html">
+                    <i class="fa fa-heart" aria-hidden="true"></i>
                 </a>
             </li>
             <li>
@@ -59,7 +57,7 @@
         </ul>
     </div>
     <div id="content">
-        <!--<div class="swipeOpenMenu" id="swipeOpenMenu"></div>-->
+	    <!--<div class="swipeOpenMenu" id="swipeOpenMenu"></div>-->
         <div class="closeMenu" id="closeMenu"></div>
         <nav class="navbar navbar-default">
             <a id="openMenu" class="navbar-brand" href="#">
@@ -67,28 +65,46 @@
             </a>
         </nav>
 
-        <div class="container" style="background: url('img/kartta3.png') center top no-repeat;background-size:cover;">
-
+        <div class="container">
         </div>
     </div>
+</div>
+
+
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.mobile-events.min.js"></script>
 <script type="text/javascript" src="js/cordova.oauth2.js"></script>
+<script type='application/javascript' src='js/fastclick.js'></script>
 <script>
-    $(document).ready(function(){
-        function qs(key) {
-            key = key.replace(/[*+?^$.\[\]{}()|\\\/]/g, "\\$&"); // escape RegEx meta chars
-            var match = location.search.match(new RegExp("[?&]" + key + "=([^&]+)(&|$)"));
-            var slide = match && decodeURIComponent(match[1].replace(/\+/g, " "));
-            if (Math.floor(slide) == slide && $.isNumeric(slide))
-                return parseInt(slide);
-            else
-                return 0;
-        }
-        $('#myCarousel').carousel(qs('slide'));
+
+	$(function() {
+        FastClick.attach(document.body);
     });
-    // SIDE MENU
+
+    $(function(){
+        $.getJSON('schedule.json',function(data){
+            //console.log(data.wednesday[0].schedule.length)
+            for(i = 0; i<data.wednesday.length; i++){
+                $('.container').append('<div><strong>' + data.wednesday[i].venue + '</strong></div>');
+                for(j = 0; j<data.wednesday[i].schedule.length; j++){
+                    $('.container').append(
+                        '<div>'+
+                        data.wednesday[i].schedule[j].name + ', ' +
+                        data.wednesday[i].schedule[j].company + '<br>' + data.wednesday[i].schedule[j].time
+                        + '</div>'
+                    );
+                };
+                $('.container').append('<hr>');
+            };
+
+            /*$.each(data.employees,function(i,emp){
+                $('ul').append('<li>'+emp.firstName+' '+emp.lastName+'</li>');
+            });*/
+        });
+    });
+
+
 
     $('#openMenu').tapend(function(){
         $('.wrapper').animate(
@@ -117,41 +133,13 @@
 		);
         $(this).css('display', 'none');
     }).stop(true);
-
-/*  // MENU SWIPE FROM LEFT
+/*
     $('#content').swiperight(function(){
         $('.wrapper').animate({left:'0px'});
         $('#closeMenu').css('display','block');
     });
 */
-    // SPEAKER INTRO CAROUSEL
-    $("#myCarousel").swiperight(function() {
-        $("#myCarousel").carousel('prev');
-    });
 
-    $("#myCarousel").swipeleft(function() {
-        $("#myCarousel").carousel('next');
-    });
-
-    $(".carousel-caption").tapend(function(){
-        $(this).animate({bottom:'0vh'},200);
-        $(this).find('#arrowUp').removeClass('fa-chevron-up').addClass('fa-chevron-down');
-        $('.closeMenu').css({
-            'display': 'block',
-            'height': '54vh'
-            });
-    });
-
-    $('.closeMenu').on('tapend tapmove', function(){
-        $(".carousel-caption").animate({bottom:'-50vh'},200);
-        $(".carousel-caption").find('#arrowUp').removeClass('fa-chevron-down').addClass('fa-chevron-up');
-        $(this).css({
-            'display': 'none',
-            'height': '100vh'
-        });
-    });
-
-    // USER INFO
 	$('#send').on('tap', function(){
 		localStorage.userName = $('#input').val();
 		introductions();
@@ -168,10 +156,10 @@
 
 		}else{
 			$('#greetings').html('You\'re new! Introduce yourself <strong><a href="">here</a></strong>');
-		};
-	};
+		}
+	}
 
-    // LINKEDIN OAUTH2
+    // template for new oauth2 service
     function oauth2_login() {
         $.oauth2({
             auth_url: 'https://www.linkedin.com/oauth/v2/authorization',           // required
@@ -200,7 +188,7 @@
             $("#logs").append("<p class='error'><b>error: </b>"+JSON.stringify(error)+"</p>");
             $("#logs").append("<p class='error'><b>response: </b>"+JSON.stringify(response)+"</p>");
         });
-    };
+    }
 </script>
 </body>
 </html>
