--- a/www/schedule-thu.html
+++ b/www/schedule-thu.html
@@ -52,11 +52,13 @@
                 </a>
             </li>
             <li>
-                <i class="fa fa-map-o" aria-hidden="true"></i>
+				<a href="map.html">
+                	<i class="fa fa-map-o" aria-hidden="true"></i>
+				</a>
             </li>
             <li>
-                <a href="partners.html">
-                    <i class="fa fa-heart" aria-hidden="true"></i>
+                <a href="matchma.html">
+                    <i class="fa fa-handshake-o" aria-hidden="true"></i>
                 </a>
             </li>
             <li>
