--- a/www/matchma.html
+++ b/www/matchma.html
@@ -85,6 +85,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.mobile-events.min.js"></script>
 <script type="text/javascript" src="js/cordova.oauth2.js"></script>
+<script type='application/javascript' src='js/inAppBrowser.js'></script>
 <script>
     $(document).ready(function(){
         function qs(key) {
