--- a/www/infopage.html
+++ b/www/infopage.html
@@ -23,11 +23,7 @@
     <link rel="stylesheet" href="css/shift-styles.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link href="css/carousel.css" rel="stylesheet">
-	<style>
-		::-webkit-scrollbar {
-			display:none;
-		}
-	</style>
+    <link href="css/infopage.css" rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
@@ -49,18 +45,18 @@
                 </a>
             </li>
             <li>
-				<a href="map.html">
-                	<i class="fa fa-map-o" aria-hidden="true"></i>
-				</a>
+                <i class="fa fa-map-o" aria-hidden="true"></i>
             </li>
             <li>
-                <a href="matchma.html">
-                    <i class="fa fa-handshake-o" aria-hidden="true"></i>
+                <a href="partners.html">
+                    <i class="fa fa-heart" aria-hidden="true"></i>
                 </a>
             </li>
             <li>
+                <a href="infopage.html">
                 <i class="fa fa-info" aria-hidden="true"></i>
-            </li>
+            </a>
+                    </li>
         </ul>
     </div>
     <div id="content">
@@ -72,22 +68,86 @@
             </a>
         </nav>
 
-        <div class="container" style="padding-top: 5vh;">
-			<h4>Get networking now with</h4>
-			<a href="https://app.brella.io/SHIFT2017/" target="_system" style="width:60vw; padding: 10vh 0;"><img src="img/brella-newlogo.svg" style="width:60vw; padding: 6vh 0;"></a>
-			<h1 style="margin-bottom:6vh;">Matchmaking available for professional pass only</h1>
-			<div style="width: 100%; height: 47.2vh; background: url('img/purple-haze.jpeg') center center no-repeat;background-size: cover;border-top: 1px solid #e64696;">
-				<h4 style="width:70vw; margin: 6vh auto;">Upgrade your ticket to professional pass at<a href="" style="display: block; margin: 3vh;"><img src="img/lyyti.png" style="display: block; margin: 3vh auto; width: 40vw;"></img></a> or <a href=""style="display: block; margin: 3vh;"><h1>AT THE <i class="fa fa-info-circle" aria-hidden="true"></i> DESK</h1></a></h4>
-			</div>
-        </div>
+        <div class="container">
+            <div class="container-fluid padding">
+    <div class="tab">
+
+        <div class ="tablinkINFO" onclick="openTab(event, 'INFO')"><p>INFO<span style="font-family:Gilroy-ExtraBold"></span></p></div>
+        <div class ="tablinkFAQ" onclick="openTab(event, 'FAQ')"><p>FAQ<span style="font-family:Gilroy-ExtraBold"></span></p></div>
+                </div>
+                </div>
+            <div id="FAQ" class="tabcontent">
+             <h1>Frequently asked questions</h1>
+            <div class="vivid-simple-accordion" id="vivid-simple-accordion-8129">
+        <div class="simple-accordion-group closed">
+        <div class="simple-accordion-title-shell">
+            <h2 class="panel-title">Is this a day event?</h2>        </div>
+        <div class="simple-accordion-description">
+            <p>Yes. The event schedule starts at 10am and finishes at 17pm on both event days.</p>        </div>
     </div>
+        <div class="simple-accordion-group closed">
+        <div class="simple-accordion-title-shell">
+            <h2 class="panel-title">How to get to the SHIFT</h2>        </div>
+        <div class="simple-accordion-description">
+            <h4>Reaching Turku</h4><p>Turku is a transportation hub hosting both an airport and a harbour. You can also reach the city by a train, a bus or a car.</p><h4>By Air</h4><p>You may reach Turku by air. Please visit the below web site for more information.</p><a href="http://www.finavia.fi/en/turku/" target="_system">http://www.finavia.fi/en/turku/</a><h4>Train</h4><p>You can reach Turku by a train from Helsinki or Tampere. Please consult the below website for timetables and tickets.</p><a href="http://www.vr.fi/" target="_system">www.vr.fi/</a><h4>Ferry</h4><p>There are ferry connections to Turku from Stockholm.</p><p>Please consult the below websites for timetables and tickets.</p><a href="http://www.siljaline.fi" target="_system">www.siljaline.fi</a><h4>Bus</h4><p>Please consult the below websites for timetables and tickets.</p><a href="http://www.matkahuolto.fi" target="_system">www.matkahuolto.fi</a><a href="http://www.onnibus.fi">www.onnibus.fi</a>        </div>
+    </div>
+        <div class="simple-accordion-group closed">
+        <div class="simple-accordion-title-shell">
+            <h2 class="panel-title">About Turku</h2>        </div>
+        <div class="simple-accordion-description">
+            <p>Turku is the oldest city in Finland and boasts a rich historical and cultural heritage. It is home to the oldest school as well as the oldest theatre in Finland.The SHIFT is continuing this tradition of trailblazing by gathering some of the sharpest minds in the world to actively shape our global future heritage.  Located at the south-western coast of Finland it is a gateway to one of the most beautiful archipelagos in the world.</p><p>The event venue is the Turku Castle dating back to the 1300th century. At this truly unique venue you can hear the wings of history, while making history as part of the SHIFT.  </p>        </div>
+    </div>
+        <div class="simple-accordion-group closed">
+        <div class="simple-accordion-title-shell">
+            <h2 class="panel-title">Where to stay in Turku</h2>        </div>
+        <div class="simple-accordion-description">
+            <p>There are plenty of hotels in and around Turku, but we recommend that you check out our partners.</p><span id="docs-internal-guid-4ecf294a-1464-776a-927c-d8a595fd32b5"><a href="https://www.cumulus.fi/en" target="_system">https://www.cumulus.fi/en</a></span><p></p><a href="https://www.sokoshotels.fi/en" target="_system">https://www.sokoshotels.fi/en</a>        </div>
+    </div>
+        <div class="simple-accordion-group closed">
+        <div class="simple-accordion-title-shell">
+            <h2 class="panel-title">Is this a tech event?</h2>        </div>
+        <div class="simple-accordion-description">
+            <p><span id="docs-internal-guid-e9b0f153-099d-3a44-2595-11aecffcafe2"></span></p><p dir="ltr" style="line-height:1.38;margin-top:0pt;margin-bottom:0pt;" rel="line-height:1.38;margin-top:0pt;margin-bottom:0pt;">We certainly are not an event only for the tech geeks drooling over the latest gadget. Having said that, we do acknowledge that technology is a driver of change in the fields of health, learning, and energy. We are about tech empowering humans, not the other way around.</p><p>So your answer is yes and no. </p>        </div>
+    </div>
+        <div class="simple-accordion-group closed">
+        <div class="simple-accordion-title-shell">
+            <h2 class="panel-title">Is this an event for me?</h2>        </div>
+        <div class="simple-accordion-description">
+            <span id="docs-internal-guid-e9b0f153-099d-b261-56ad-382480bd9e1a"><p dir="ltr" style="line-height:1.38;margin-top:0pt;margin-bottom:0pt;">It is crucial for any individual or company to stay relevant. The SHIFT is for pioneers and thought leaders in the fields of health, learning, and energy. So, if you work in those fields, it is pivotal to join The SHIFT, and learn about the latest trends and developments.</p></span><p>Plus we have food. And circus. And music. Comprende? </p>        </div>
+    </div>
+    </div>
+                </div>
+       <div id="INFO" class="tabcontent">
+           <h1>The SHIFT 2017</h1>
+           <p>SHIFT is a business festival where every participant is crucial for making SHIFT happen. At SHIFT you can participate in round-table discussions, one-on-one meetings, and workshops, as well as listen to keynotes and panel discussions. SHIFT will take place at the Castle of Turku on the 31st of May and the 1st of June 2017.
+               Behind SHIFT Business Festival is a non-profit organization Shift Ry, registered in Turku, Finland. Our team of active citizens consists of mainly young professionals, entrepreneurs and students. We are motivated not by money, but by making a positive impact to our society. That is why we SHIFTers, work pro-bono to create a better future.
+               SHIFT is backed by companies and the city of Turku, as well as Turku Chamber of Commerce and The Federation of Finnish Enterprises, while the event itself is put together by local JCI members, start-up actives and students.</p>
+           </div>
+
+
+        </div>
 <script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/accordion.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.mobile-events.min.js"></script>
+<script src="js/tab.js"></script>
 <script type="text/javascript" src="js/cordova.oauth2.js"></script>
-<script type='application/javascript' src='js/inAppBrowser.js'></script>
 <script>
+
+
+    $(".tablinkINFO").on("tap", function(){
+        $(this).css("background-color", "rgb(250,230,149)");
+        $(".tablinkFAQ").css("background-color", "#fec248");
+    });
+
+    $(".tablinkFAQ").on("tap", function(){
+        $(this).css("background-color", "rgb(250,230,149)");
+        $('.tablinkINFO').css("background-color", "#fec248");
+    });
+
+
     $(document).ready(function(){
+            openTab(event, 'INFO');
         function qs(key) {
             key = key.replace(/[*+?^$.\[\]{}()|\\\/]/g, "\\$&"); // escape RegEx meta chars
             var match = location.search.match(new RegExp("[?&]" + key + "=([^&]+)(&|$)"));
@@ -213,5 +273,6 @@
         });
     };
 </script>
+
 </body>
 </html>
