--- a/www/index.html
+++ b/www/index.html
@@ -22,11 +22,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/shift-styles.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-	<style>
-		::-webkit-scrollbar {
-			display:none;
-		}
-	</style>
 </head>
 
 <body>
@@ -35,32 +30,37 @@
         <ul>
             <li>
                 <a href="index.html">
-                    <i class="fa fa-home" aria-hidden="true"></i>
+                    HOME
                 </a>
             </li>
             <li>
                 <a href="schedule.html">
-                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                    SCHEDULE
                 </a>
             </li>
             <li>
                 <a href="speakers.html">
-                    <i class="fa fa-microphone" aria-hidden="true"></i>
+                    PROGRAM
                 </a>
             </li>
             <li>
 				<a href="map.html">
-                	<i class="fa fa-map-o" aria-hidden="true"></i>
+                	MAP
+				</a>
+            </li>
+			<li>
+				<a href="voting.html">
+                	VOTING
 				</a>
             </li>
             <li>
                 <a href="matchma.html">
-                    <i class="fa fa-handshake-o" aria-hidden="true"></i>
+                    MATCH<br>MAKING
                 </a>
             </li>
             <li>
 				<a href="infopage.html">
-					<i class="fa fa-info" aria-hidden="true"></i>
+					INFO
 				</a>
             </li>
         </ul>
@@ -128,8 +128,6 @@
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.mobile-events.min.js"></script>
-<script type="text/javascript" src="js/cordova.oauth2.js"></script>
-<script type='application/javascript' src='js/fastclick.js'></script>
 <script>
 
 	$(function() {
@@ -213,56 +211,6 @@
         $('#closeMenu').css('display','block');
     });
 */
-
-	$('#send').on('tap', function(){
-		localStorage.userName = $('#input').val();
-		introductions();
-	});
-
-	$('#erase').on('tap', function(){
-		localStorage.removeItem('userName');
-	});
-
-	introductions();
-	function introductions (){
-		if(localStorage.userName != undefined){
-			$('#greetings').html('Welcome <strong>' +localStorage.userName +'</strong>!<br><br><a href="">Check out todays awesome <strong>schedule</strong></a>');
-
-		}else{
-			$('#greetings').html('You\'re new! Introduce yourself <strong><a href="">here</a></strong>');
-		}
-	}
-
-    // template for new oauth2 service
-    function oauth2_login() {
-        $.oauth2({
-            auth_url: 'https://www.linkedin.com/oauth/v2/authorization',           // required
-            response_type: 'code',      // required - "code"/"token"
-            token_url: 'https://www.linkedin.com/uas/oauth2/accessToken',          // required if response_type = 'code'
-            client_id: '78p3krb1oky5vx',          // required
-            client_secret: 'ptIkcf2REN9hSiEZ',      // required if response_type = 'code'
-            redirect_uri: 'http://localhost/',       // required - some dummy url
-            other_params: {scope: 'r_basicprofile', state: 'oujeeoujeeoujeea'}        // optional params object for scope, state, display...
-        }, function(token, response){
-            // do something with token or response
-            var authtoken = 'bearer'+token
-            $('#logs').html(token);
-            $.ajax({
-                url: "https://api.linkedin.com/v1/people/~?(:id)format=json?oauth_token="+token,
-                type: "GET",
-                Host: "api.linkedin.com",
-                Connection: "Keep-Alive",
-                Authorization: authtoken,
-                success: function(data) {
-                    $('#logs2').html(data);
-                }
-            });
-        }, function(error, response){
-            // do something with error object
-            $("#logs").append("<p class='error'><b>error: </b>"+JSON.stringify(error)+"</p>");
-            $("#logs").append("<p class='error'><b>response: </b>"+JSON.stringify(response)+"</p>");
-        });
-    }
 </script>
 </body>
 </html>
