--- a/www/voting.html
+++ b/www/voting.html
@@ -65,28 +65,184 @@
             </a>
         </nav>
 
-        <div class="container">
-			<p>VOTING</p>
-			<form name="votingForm" method="post" action="http://localhost/vote.php">
-				<label for="1"><input type="checkbox" value="1" name="votes[]">Speaker 1</label><br>
-				<label for="2"><input type="checkbox" value="2" name="votes[]">Speaker 2</label><br>
-				<label for="3"><input type="checkbox" value="3" name="votes[]">Speaker 3</label><br>
-				<label for="4"><input type="checkbox" value="4" name="votes[]">Speaker 4</label><br>
-				<label for="5"><input type="checkbox" value="5" name="votes[]">Speaker 5</label><br>
-				<label for="6"><input type="checkbox" value="6" name="votes[]">Speaker 6</label><br>
-				<label for="7"><input type="checkbox" value="7" name="votes[]">Speaker 7</label><br>
-				<input type=hidden name="voterUUID" value="12345678901">
-				<input type=submit value="VOTE">
+        <div class="container" style="padding-top: 3vh;">
+			<h1>Vote for your favorites</h1>
+			<h5 id="voteInfo">5 votes left</h5>
+			<form name="votingForm" id="votingForm" method="post" action="http://c5kj8xbh.c5.suncomet.fi/shift/vote2.php">
+				<div id="votingCompetititors">
+					<label for="1"><input type="checkbox" id="1" value="1" name="votes[]">PITCHER 1</label>
+					<label for="2"><input type="checkbox" id="2" value="2" name="votes[]">PITCHER 2</label>
+					<label for="3"><input type="checkbox" id="3" value="3" name="votes[]">PITCHER 3</label>
+					<label for="4"><input type="checkbox" id="4" value="4" name="votes[]">PITCHER 4</label>
+					<label for="5"><input type="checkbox" id="5" value="5" name="votes[]">PITCHER 5</label>
+					<label for="6"><input type="checkbox" id="6" value="6" name="votes[]">PITCHER 6</label>
+					<label for="7"><input type="checkbox" id="7" value="7" name="votes[]">PITCHER 7</label>
+					<label for="8"><input type="checkbox" id="8" value="8" name="votes[]">PITCHER 8</label>
+					<label for="9"><input type="checkbox" id="9" value="9" name="votes[]">PITCHER 9</label>
+					<label for="10"><input type="checkbox" id="10" value="10" name="votes[]">PITCHER 10</label>
+				</div>
+
+				<input type="text" id="voterUUID" name="voterUUID" value="">
+				<input type=submit value="Vote">
+				<p id="response"></p>
 			</form>
-			<p id="result"></p>
         </div>
     </div>
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.mobile-events.min.js"></script>
 <script type="text/javascript" src="js/cordova.oauth2.js"></script>
+<script type='application/javascript' src='js/inAppBrowser.js'></script>
 <script>
     $(document).ready(function(){
+		//GET DEVICE UUID
+		$('#voterUUID').val('123e4567-e89b-12d3-a456-426655440000');
+
+		//////////////  VOTING FORM  //////////////
+		$( document ).ajaxError(function( event, request, settings ) {
+			$( "#response" )
+				.html( "<h1>Something went wrong</h1><h4>Error connecting to server</h4>" )
+		  		.css("opacity", 1)
+				.fadeTo(2500, 0);
+		});
+
+		// AJAX CHECK IF DEVICE HAS VOTED
+		var checkVotes = function(){
+			$.ajax({
+				data: $('#votingForm').serialize(),
+				type: 'POST',
+				url: 'http://c5kj8xbh.c5.suncomet.fi/shift/checkvotes2.php',
+				success: function(response) {
+					var response = JSON.parse(response);
+					var votesGiven = 0;
+
+					//lock form inputs according to given votes already in the DB
+					//horrible individual check of each vote value
+					if(response){
+						if(response.v1 != 0){
+							$('#' + response.v1)
+								.attr('checked', true)
+								.attr('disabled', true)
+								.addClass('givenVote')
+								.change();
+							votesGiven++;
+						};
+						if(response.v2 != 0){
+							$('#' + response.v2)
+								.attr('checked', true)
+								.attr('disabled', true)
+								.addClass('givenVote')
+								.change();
+							votesGiven++;
+						};
+						if(response.v3 != 0){
+							$('#' + response.v3)
+								.attr('checked', true)
+								.attr('disabled', true)
+								.addClass('givenVote')
+								.change();
+							votesGiven++;
+						};
+						if(response.v4 != 0){
+							$('#' + response.v4)
+								.attr('checked', true)
+								.attr('disabled', true)
+								.addClass('givenVote')
+								.change();
+							votesGiven++;
+						};
+						if(response.v5 != 0){
+							$('#' + response.v5)
+								.attr('checked', true)
+								.attr('disabled', true)
+								.addClass('givenVote')
+								.change();
+							votesGiven++;
+						};
+					}
+
+					//if five votes already given, disable everything and show response
+					if(votesGiven === 5){
+						$('input[type="checkbox"]').each(function(){
+							$(this).attr('disabled', true);
+						});
+						$('input[type="submit"]').attr('disabled', true);
+						$('#response').html('<h1>Thank you!</h1> <h4>You have used all your votes</h4>')
+					};
+				}
+			});
+			return false; // cancel original event to prevent form submitting
+		};
+		checkVotes();
+
+		// AJAX - SEND VOTES
+		$('#votingForm').submit(function() { // catch the form's submit event
+			var data = $(this).serializeArray();
+			if (data.length != 1){
+				$('.givenVote').removeAttr('disabled');
+				var data = $(this).serializeArray();
+				//if less than five votes given, push zeroes til five votes in array
+				while(data.length < 6){
+					data.push({name: 'votes[]',value: '0'});
+				};
+
+				$.ajax({
+					data: data,
+					type: $(this).attr('method'),
+					url: $(this).attr('action'),
+					success: function(response) {
+						location.reload();
+					}
+				});
+			} else{
+				$('#response').html('<p>Pick at least one pitch to vote for!</p>')
+			}
+
+			return false; // cancel original event to prevent form submitting
+		});
+
+		// show and fadeout response text
+		$('input[type="submit"]').click(function(){
+			$('#response')
+				.stop()
+				.css("opacity", 1)
+				.fadeTo(5000, 0);
+		});
+
+		var votesLeft = function (){
+			var checked = 5 - $('input[type="checkbox"]:checked').length;
+			$('#voteInfo').html(checked + ' votes left');
+		};
+		votesLeft();
+		$('input[type="checkbox"]').change(function(){
+			votesLeft();
+		});
+
+		$('input[type="checkbox"]').change(function(){
+			var checked = $('input[type="checkbox"]:checked').length;
+			if(checked < 4){
+				$('input[type="submit"]').attr('disabled', false);
+			} else if(checked === 4){
+				$('input[type="checkbox"]:not(.givenVote)').each(function(){
+					$(this).attr('disabled', false);
+				});
+			} else {
+					$('input[type="checkbox"]:not(:checked):not(.givenVote)').each(function(){
+					$(this).attr('disabled', true);
+				});
+			}
+		});
+
+		$('input[type="checkbox"]').change(function(){
+			$(this).parent().toggleClass("checkedComponent");
+		});
+
+		$('input[type="checkbox"]:checked').each(function(){
+			$(this).parent().toggleClass("checkedComponent");
+		});
+
+		//////////////  END VOTING FORM  //////////////
+
         function qs(key) {
             key = key.replace(/[*+?^$.\[\]{}()|\\\/]/g, "\\$&"); // escape RegEx meta chars
             var match = location.search.match(new RegExp("[?&]" + key + "=([^&]+)(&|$)"));
